--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,21 @@ body {
   padding-bottom: 15px;
   flex-wrap: wrap;
 }
-
+#carlo-icon {
+    display:block;
+    margin:auto;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  /* background-color: #2196F3; */
+  padding: 10px;
+}
+.grid-item {
+  /* background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);*/
+  padding: 10px;
+}
 .controls > * {
   margin: 15px !important;
   flex: 1 1 auto;
@@ -48,7 +62,7 @@ body {
   font-family: monospace;
   white-space: pre;
   overflow: auto;
-  line-height: 16px;
+  line-height: 1.5;
 }
 
 .artist {
